--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
 </head>
 <body>
-    
+    <h1>Titulo h1</h1>
+    <p>Parrafo</p>
 </body>
 </html>
